# VulkanGraphicalEngine

./: .gitignore  CMakeLists.txt  Makefile.editor.linux.mak  Makefile.editor.windows.mak  Makefile.editor.windows.static.mak  Makefile.engine.linux.mak  Makefile.engine.windows.mak  Makefile.engine.windows.static.mak  Makefile.test.windows.mak  Makefile.tests.linux.mak  Makefile.tests.windows.mak  README.md  build_all.bat  build_all.sh  build_all_static.bat  clean_all.bat  post_build.bat  post_build.sh  post_build_static.bat  run_editor.bat  run_editor.sh
assets/materials/: material.kmt
assets/shaders/: BuiltinObjectShader.frag.glsl
build_ninja_clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_ninja_clang/editor/: cmake_install.cmake
build_ninja_clang/engine/: Engine.lib  cmake_install.cmake
build_ninja_clang/engine/glfw/: cmake_install.cmake
build_ninja_clang/engine/glfw/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
build_ninja_clang/engine/spdlog/: cmake_install.cmake
build_ninja_clang_windows/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
build_ninja_clang_windows/editor/: cmake_install.cmake
build_ninja_clang_windows/engine/: Engine.lib  cmake_install.cmake
build_ninja_clang_windows/engine/glfw/: cmake_install.cmake
build_ninja_clang_windows/engine/glfw/src/: cmake_install.cmake
build_ninja_clang_windows/engine/spdlog/: cmake_install.cmake  spdlogd.lib
build_ninja_gcc_windows/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
build_ninja_gcc_windows/editor/: cmake_install.cmake
build_ninja_gcc_windows/engine/: cmake_install.cmake
build_ninja_gcc_windows/engine/glfw/: cmake_install.cmake
build_ninja_gcc_windows/engine/glfw/src/: cmake_install.cmake  glfw3.pc
build_ninja_gcc_windows/engine/spdlog/: cmake_install.cmake
docs/editor/: game.md
docs/engine/core/: asserts.md  clock.md
editor/: CMakeLists.txt  build.bat  build.sh
editor/src/: entry.c  entry.h  game.c  game.h  main.c
engine/: CMakeLists.txt  build.bat  build.sh
engine/shaders/: BuiltinObjectShader.frag  BuiltinObjectShader.vert
engine/src/: defines.h  entry.h  game_types.h
engine/src/application/includes/: application.h
engine/src/application/src/: application.c
engine/src/containers/: dynamic_array.c  dynamic_array.h  hashtable.c  hashtable.h
engine/src/containers/includes/: dynamic_array.h
engine/src/containers/src/: dynamic_array.c
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  engine_memory.c  engine_memory.h  engine_string.c  engine_string.h  event.c  event.h  input.c  input.h  logger.c  logger.h
engine/src/core/memory/includes/: memory.h
engine/src/core/memory/src/: memory.c
engine/src/engine_math/: engine_math.c  engine_math.h  math_types.h
engine/src/engine_memory/: engine_memory.c  engine_memory.h  engine_string.c  engine_string.h  linear_allocator.c  linear_allocator.h
engine/src/math/: engine_math.h  math_types.h
engine/src/platform/: filesystem.c  filesystem.h  platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_platform.h  vulkan_render_pass.c  vulkan_render_pass.h  vulkan_shader_utils.c  vulkan_shader_utils.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl  vulkan_utils.c  vulkan_utils.h
engine/src/renderer/vulkan/shaders/: vulkan_material_shader.c  vulkan_material_shader.h  vulkan_object_shader.c  vulkan_object_shader.h
engine/src/resources/: resource_types.h
engine/src/systems/: material_system.c  material_system.h  texture_system.c  texture_system.h
tests/: CMakeLists.txt  build.bat  build.sh  main.c
tests/include/: expect.h  memory_test.h  test_manager.h
tests/include/memory/: linear_allocator_tests.h
tests/src/: main.c  memory_test.c  test_manager.c
tests/src/memory/: linear_allocator_tests.c
